examples/test/testpolicy18100.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy18100
  namespace: namespace242
spec:
  podSelector:
    matchLabels:
      key9: value19
      key23: value38
      key19: value15
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key12: value25
      podSelector:
        matchLabels:
          key28: value3
